--- a/config.yaml
+++ b/config.yaml
@@ -25,10 +25,8 @@ languages:
 params:
   # Secciones principales
   mainSections:
+    - sobremi
     - viajes
-    - markdown
-    - Apuntes
-    - Television
   featuredImageField: "image"
   rssFullContent: true
   favicon: "/favicon.ico"
@@ -36,7 +34,7 @@ params:
   # Pie de página
   footer:
     since: 2023
-    customText: "¡Gracias por visitar!"
+    customText: "¡Gracias por visitar mi web!"
 
   # Formato de fechas
   dateFormat:
@@ -120,14 +118,18 @@ menu:
     - identifier: "about"
       name: "Sobre mí"
       url: "/about/"
-      weight: 2
+      weight: 1
     - identifier: "viajes"
       name: "Viajes"
       url: "/viajes/"
-      weight: 3
+      weight: 2
     - identifier: "apuntes"
       name: "Apuntes"
       url: "/apuntes/"
+      weight: 3
+    - identifier: "markdown"
+      name: "Markdown"
+      url: "/markdown/"
       weight: 4
     - identifier: "television"
       name: "Television"
@@ -144,14 +146,9 @@ menu:
       url: "https://twitter.com/tuusuario"
       params:
         icon: "brand-twitter"
-    - identifier: "linkedin"
-      name: "LinkedIn"
-      url: "https://linkedin.com/tuusuario"
-      params:
-        icon: "brand-linkedin"
 
 pagination:
-  pagerSize: 3
+  pagerSize: 5
 
 permalinks:
   post: "/p/:slug/"
