despliegue del proyecto

--- a/config.yaml
+++ b/config.yaml
@@ -1,4 +1,4 @@
-baseURL: "https://www.blogDeSara.com"
+baseURL: "https://SaruCodes.io/web-hugo"
 languageCode: "es-es"
 title: "SaruCodes"
 theme: "hugo-theme-stack"
